<resources>
    <string name="app_name">ScoreIt</string>
    <string name="botonPerfil">Profile</string>
    <string name="botonInicio">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search locals</string>
    <string name="ranking">Ranking</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="owner">Owner</string>
    <string name="user_name">Name</string>
    <string name="user_type">Type</string>
    <string name="na" translatable="false">N/A</string>
    <string name="add_property">Add property</string>
    <string name="my_property">My owns</string>
    <string name="user_admin">Admin users</string>
    <string name="admin">Admin</string>
    <string name="sign_out">Sign out</string>
    <string name="verify">Verify</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="local_name">Local Name...</string>
    <string name="location">Location</string>
    <string name="local_location">Local Location...</string>
    <string name="nombre_local_textview">Name</string>
    <string name="description">Description</string>
    <string name="score">Score</string>
    <string name="scoreit" translatable="false">ScoreIt!</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
