<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"

        android:text="@string/user_name"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        android:textStyle="bold" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:itemBackground="@color/primaryColor"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/nav_menu"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name_text"
        android:layout_alignStart="@+id/profile_name_text"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:text="@string/na"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name_text"
        android:layout_alignStart="@+id/profile_name_text"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/user_type"

        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/type_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_type_text"
        android:layout_alignStart="@+id/profile_type_text"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:text="@string/na"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/verificado"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/type_profile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-2.5dp"
        android:layout_toEndOf="@+id/type_profile"
        app:srcCompat="@mipmap/verified" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="100dp"

        android:background="@drawable/custom_button"
        android:onClick="addAnuncio"
        android:text="@string/add_property" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/custom_button"
        android:onClick="misAnuncios"
        android:text="@string/my_property" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="100dp"

        android:background="@drawable/custom_button"
        android:onClick="gestionUsuarios"
        android:text="@string/user_admin" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="180dp"

        android:background="@drawable/custom_button"
        android:onClick="cerrarSesion"
        android:text="@string/sign_out" />



</RelativeLayout>