<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Registro">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"

        app:layout_constraintBottom_toTopOf="@+id/registro_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/scoreit_logotipo" />

    <Button
        android:id="@+id/registro_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_button"
        android:onClick="registrar"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"

        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registro_user"
        android:layout_width="match_parent"
        android:layout_height="46dp"

        android:layout_marginBottom="20dp"
        android:background="@layout/search_outline"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"

        android:paddingStart="22dp"
        android:paddingTop="12dp"


        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        android:textColor="@color/primaryTextColor"

        android:textColorHint="#95989A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registro_password"
        tools:layout_editor_absoluteX="0dp"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

    <EditText
        android:id="@+id/registro_password"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="84dp"
        android:background="@layout/search_outline"

        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"

        android:paddingBottom="12dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="#95989A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        tools:layout_editor_absoluteX="16dp"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/registro_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:buttonTint="@color/primaryTextColor"
            android:checked="true"
            android:text="@string/user"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"


            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:buttonTint="@color/primaryTextColor"
            android:text="@string/owner"
            android:textColor="@color/primaryTextColor"

            />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>