<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"

        app:layout_constraintBottom_toTopOf="@+id/login_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/scoreit_logotipo" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_button"

        android:onClick="login"
        android:text="@string/signIn"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"


        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="46dp"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:background="@layout/search_outline"
        android:ems="10"

        android:hint="@string/user"
        android:inputType="textPersonName"


        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"

        android:paddingBottom="12dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="#95989A"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@+id/login_password"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="176dp"

        android:background="@layout/search_outline"
        android:ems="10"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="22dp"
        android:paddingTop="12dp"

        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="#95989A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>