<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    tools:context=".LocalActivity"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        app:srcCompat="@mipmap/locales_genericos"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />

    <LinearLayout
        android:id="@+id/linearlayout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/local_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/local_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_puntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_nombre"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puntuacion_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:id="@+id/puntuacion_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:layout_marginRight="5dp"
            />

        <ImageView
            android:id="@+id/verificado"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star" />

    </LinearLayout>

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_puntuacion"
        android:layout_marginTop="12dp"
        android:text="@string/na"
        android:padding="12dp"/>


    <LinearLayout
        android:id="@+id/estrellas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcion"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <ImageView
            android:id="@+id/star1"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star_vacia"
            android:tag="1"
            android:onClick="setScore"/>
        <ImageView
            android:id="@+id/star2"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star_vacia"
            android:tag="2"
            android:onClick="setScore"/>
        <ImageView
            android:id="@+id/star3"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star_vacia"
            android:tag="3"
            android:onClick="setScore"/>
        <ImageView
            android:id="@+id/star4"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star_vacia"
            android:tag="4"
            android:onClick="setScore"/>
        <ImageView
            android:id="@+id/star5"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="18.5sp"
            app:srcCompat="@mipmap/ic_star_vacia"
            android:tag="5"
            android:onClick="setScore"/>

    </LinearLayout>

    <Button
        android:id="@+id/boton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/estrellas"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="12dp"

        android:background="@drawable/custom_button"
        android:text="@string/scoreit"
        android:textAllCaps="false"
        android:onClick="scoreit"/>






</RelativeLayout>