<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/primaryTextColor"
    tools:context=".MainActivity">




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:itemBackground="@color/primaryColor"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/nav_menu"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:id="@+id/linear_busqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp" >
        <EditText
            android:id="@+id/barra_busqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@layout/search_outline"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:paddingStart="22dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:textColor="#999999"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:background="@color/primaryTextColor"
            app:srcCompat="@mipmap/ic_search"
            android:onClick="buscar"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ranking_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_busqueda"
        android:layout_alignStart="@+id/linear_busqueda"

        android:layout_marginTop="12dp"
        android:layout_marginStart="22dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/ranking"
            android:textColor="@color/secondaryTextColor"
            android:textSize="30sp"
            android:textStyle="bold"

            android:layout_width="wrap_content" />

        <ImageButton
            android:id="@+id/image_recargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="12dp"

            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:background="@color/primaryTextColor"
            app:srcCompat="@mipmap/ic_recharge"
            android:onClick="recargar"/>


    </LinearLayout>


    <!-- Ranking 1 -->
    <RelativeLayout
        android:id="@+id/relativeranking1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ranking_text"
        android:layout_alignStart="@+id/ranking_text"
        android:layout_marginEnd="40dp"
        android:tag="0"
        android:onClick="irALocal">

        <ImageView
            android:id="@+id/gold_trophy"
            android:layout_width="106dp"
            android:layout_height="97dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_gold"
            />

        <TextView
            android:id="@+id/ranking1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:layout_alignTop="@+id/gold_trophy"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/gold_trophy"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/location1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ranking1_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/gold_trophy"
            android:text="TextView"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeranking2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeranking1"
        android:layout_alignStart="@+id/ranking_text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:tag="1"
        android:onClick="irALocal">

        <ImageView
            android:id="@+id/silver_trophy"
            android:layout_width="106dp"
            android:layout_height="97dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_silver"
            />

        <TextView
            android:id="@+id/ranking2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            android:layout_alignTop="@+id/silver_trophy"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/silver_trophy"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/location2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ranking2_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/silver_trophy"
            android:text="TextView"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeranking3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeranking2"
        android:layout_alignStart="@+id/ranking_text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:tag="2"
        android:onClick="irALocal">

        <ImageView
            android:id="@+id/bronze_trophy"
            android:layout_width="106dp"
            android:layout_height="97dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_bronze"
            />

        <TextView
            android:id="@+id/ranking3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            android:layout_alignTop="@+id/bronze_trophy"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/bronze_trophy"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/location3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ranking3_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/bronze_trophy"
            android:text="TextView"
            />

    </RelativeLayout>


</RelativeLayout>



